# JsonPathFinder

./: .gitignore  README.md  gui.py  json_search.py  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
json_path_finder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_finder.py
