[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json-path-finder"
version = "1.0.0"
description = "A robust utility to find paths to keys or values in complex JSON structures."
authors = [{name = "KazeKaze93", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []

[project.scripts]
# Это позволит запускать утилиту командой `jpf` из любой папки терминала!
jpf = "json_path_finder.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8"
]